[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "normals-viewer"
version = "0.1.0"
description = "Normals visualisation and orientation clustering toolkit"
readme = "README.md"
authors = [{name = "Geomatics Engineer"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "open3d>=0.18",
    "PySide6>=6.6",
    "typer>=0.9",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.urls]
Homepage = "https://example.com/normals-viewer"

[project.scripts]
normapp = "normals_viewer.cli:app"

[project.gui-scripts]
normals-viewer = "normals_viewer.__init__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["normals_viewer"]
